traefik/dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: proxy
  ports:
    - name: internal
      port: 8080
      targetPort: 8080
